# scrape-schema-recipe

./: .gitattributes  .gitignore  .travis.yml  ATTRIBUTION.md  LICENSE  README.md  nose2.cfg  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  test_scrape.py
.github/workflows/: python-package.yml  python-publish.yml
scrape_schema_recipe/: __init__.py  example_output.py  scrape.py
scrape_schema_recipe/test_data/: allrecipes-moscow-mule-2023.html  histfriendly-carrot-fennel-soup.html  sally-coconut-cake.html
