[metadata]
name = scrape-schema-recipe
version = 0.0.1
author = Micah Cochran
description = Extracts cooking recipe from HTML structured data in the https://schema.org/Recipe format.
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache-2
license_file = LICENSE
home-page = https://github.com/micahcochran/scrape-schema-recipe
keywords = recipe, cooking, food, schema.org, schema.org/Recipe
Requires-Python = >=3.4
classifier =         
        Intended Audience :: Developers
        Operating System :: OS Independent
        License :: OSI Approved :: Apache Software License
        Programming Language :: Python :: 3
        Topic :: Internet :: WWW/HTTP
        Topic :: Text Processing :: Markup :: HTML


[options]
zip_safe=True
include_package_data = True
packages = scrape_schema_recipe
# these should be the same as requirements.txt
install_requires = 
    setuptools >= 30.3.0
    extruct
    isodate >= 0.5.1
    requests
    typing; python_version < '3.5'
    validators


[options.package_data]
* = *.txt, *.md

[bdist_wheel]
universal = 1
		
[mypy]
# for mypy, many of the module do not have stubs, which declare
# their static types, which will cause mypy to have many errors
# requests is the only one that has stubs 
ignore_missing_imports = True
